--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,9 @@ p {
     font-size: 24px;
     line-height: 42px;
 }
+a {
+    text-decoration : none;
+}
 .bold {
     font-weight: bold;
 }
@@ -125,4 +128,7 @@ p {
 }
 .contact p {
     margin-top: 16px;
+}
+.contact a {
+    color: #fff;
 }
