header+main+footer

--- a/css/style.css
+++ b/css/style.css
@@ -3,17 +3,27 @@ body {
     font-family: 'Roboto', '微軟正黑體', 'sans-serif';
     font-weight: 500;
     font-style: italic;
+    font-size: 24px;
+    line-height: 42px;
 }
 h2 {
     font-size: 64px;
     line-height: 75px;
 }
-p {
-    font-size: 24px;
-    line-height: 42px;
-}
 a {
     text-decoration : none;
+}
+.mb-1 {
+    margin-bottom: 8px;
+}
+.mb-2 {
+    margin-bottom: 16px;
+}
+.mb-4 {
+    margin-bottom: 32px;
+}
+.mb-5 {
+    margin-bottom: 40px;
 }
 .bold {
     font-weight: bold;
@@ -23,6 +33,7 @@ a {
 }
 .d-flex {
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
 }
 .column {
@@ -34,6 +45,9 @@ a {
 .justify-space-around {
     justify-content: space-around;
 }
+.align-start {
+    align-items: start;
+}
 .align-items-center {
     align-items: center;
 }
@@ -41,7 +55,7 @@ a {
     text-align: center;
 }
 .w-1200 {
-    width: 1200px;
+    max-width: 1200px;
     margin: 0 auto;
 }
 /*header*/
@@ -55,7 +69,6 @@ a {
     font-size: 80px;
     line-height: 94px;
     font-weight: 800;
-    padding-bottom: 32px;
 }
 
 .socialIcon {
@@ -67,12 +80,6 @@ a {
 /*about*/
 .about {
     padding: 64px 0 56px 0;
-}
-.about img {
-    padding-top: 40px;
-}
-.about p {
-    margin-bottom: 8px;
 }
 .circle {
     width: 22px;
@@ -94,15 +101,6 @@ a {
     color: #fff;
     padding: 64px 0 160px 0;
 }
-.brand h2 {
-    margin-bottom: 16px;
-}
-.brand p {
-    margin-bottom: 32px;
-}
-.brand-img1 {
-    margin-bottom: 40px;
-}
 /*Other Works*/
 .other {
     padding-top: 64px;
@@ -112,22 +110,19 @@ a {
 }
 .other-bg {
     background: url(../images/other-bg.png) no-repeat center bottom;
+    background-size: cover;
     margin-top: 80px;
     color: #fff;
-    padding-bottom: 162px;
+    padding-bottom: 160px;
 }
 .image-top {
-    position: relative;
-    top: -80px;
+    margin-top: -80px;    
 }
 /*contact*/
 .contact {
     background: #000000;
     color: #fff;
     padding: 64px 0 80px 0;
-}
-.contact p {
-    margin-top: 16px;
 }
 .contact a {
     color: #fff;
